# trading

./: .gitignore  Chatbot components.md  Lessons learned 1.md  README.md  comparison_balanced_6m_tiingo_ledger.csv  pyproject.toml  temp_agent_prompt.txt  temp_proposal.json  trade_ledger.csv
.ddio/: context_manifest.json
0001_d53e69fc-57da-442c-a311-d1fa5d81af20_kif-onboarding-agent-communication-alignment/: _topic.manifest.yaml
bot/working/: dry_run_portfolio.py  run_global_portfolio.py  run_hierarchical_portfolio.py  test_live_logic copy 2.py  test_live_logic copy.py  (+1 more)
configs/: comparison_alpaca_only_1m_tiingo.json  comparison_alpaca_only_6m_apr_tiingo.json  comparison_alpha_6m_tiingo.json  comparison_alpha_all_in.json  comparison_balanced_6m_tiingo.json  comparison_balanced_fund.json  comparison_crypto_only_1m_tiingo.json  comparison_crypto_only_6m_apr_tiingo.json  comparison_crypto_only_6m_tiingo.json  comparison_macro_only_1m_tiingo.json  comparison_macro_only_6m_apr_tiingo.json  comparison_proxies_6m_tiingo.json  run5_30d.json  run5_30d_v2.json
kif_prototype/: README.md  pyproject.toml
live/: live_dashboard.py  main_live.py  main_live_v2.py
mvs_harness/: planner.py  spf_parser.py
scripts/: build_docs.sh  test_prompt_builder.py
shared/: __init__.py
simulation/: cli.py  cli_v2.py  example_command.txt  main_sim.py  main_sim_v2.py  main_tiingo_sim.py
tests/: conftest.py  test_cli_cycle.py  test_cli_last.py  test_cli_prepare.py  test_e2e_spf2_workflows.py  test_final_fix_verification.txt  test_fix_verification.txt  test_planner.py  test_spf_parser.py
(+202 files in other folders)
